<?xml version="1.0"?>
<package format="3">
  <name>pose_pubsub</name>
  <version>0.0.1</version>
  <description>Publish PoseStamped from CSV and listen to it</description>
  <maintainer email="helenfan27@gmail.com">Helen Fan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>